--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
-version: "3.9"
+# Script Name: docker-compose.yml
+# Author: Amr (for lab practice)
+# Date of Creation: 28-Sep-2025
+# Description: Setup MySQL and ClickHouse for performance comparison.
+
+version: "3.8"
 services:
+  mysql:
+    image: mysql:8.0
+    container_name: mysql_lab
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: labdb
+    ports:
+      - "3306:3306"
+
   clickhouse:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: clickhouse/clickhouse-server:24.8
     container_name: clickhouse_lab
     ports:
-      - "8123:8123"   # HTTP interface
-      - "9000:9000"   # Native TCP client
-    volumes:
-      - clickhouse_data:/var/lib/clickhouse
-      - clickhouse_logs:/var/log/clickhouse-server
-    environment:
-      CLICKHOUSE_DB: telecom
-      CLICKHOUSE_USER: admin
-      CLICKHOUSE_PASSWORD: redhat123
-
-volumes:
-  clickhouse_data:
-  clickhouse_logs:
+      - "8123:8123"
+      - "9000:9000"
